src/features/system/System.module.css
.system {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 2em;
  justify-content: space-between;
  padding: 1em;
  border-bottom: 1px dotted #153055;
  width: 100%;
}

.top {
  height: 100px;
}

.driver {
  display: flex;
  gap: 2em;
}

.driver *>label {
  display: block;
}

.driverType {
  min-width: 100px;
}

.setting {
  min-width: 100px;
}

.setting *>label {
  display: block;
}

.features {
}

.reload>span {
  font-family: Lucida Sans Unicode;
  font-size: 2em;
  background: transparent;
  width: 4em;
  height: 4em;
}

.meters {
  display: flex;
  width: 30em;
}

.meter {
  margin: 1em;
  border: 3px dashed transparent;
}

table {
  margin: 0.6em;
  margin-top: 1em;
  width: 100%;
  max-width: 10em;
}

tr {
  border-bottom: 1px solid #7d8da2;
}

